--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^18.16.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
